Share button fix

--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
         <button id="undoBtn" disabled>Undo</button>
         <button id="resetBtn">Reset</button>
         <button id="stopBtn" disabled>Stop</button>
-    </div>
- 
+   
+
     <div id="summary">
     <div id="summaryContent"></div>
     <button id="closeSummaryBtn">Close</button>
-    <button id="shareBtn">Share Results</button> <div id="shareBtn">Share Results</div>
+    <button id="shareBtn">Share Results</button>  <-- Only this line
     </div>
 
     <script>
