--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
     <div id="lastRoundTime"></div>
     <div id="startPrompt">Tap anywhere to start</div>
 
-    <div class="controls">  <--- Opening div for controls
+    <div class="controls">  //<--- Opening div for controls
         <button id="undoBtn" disabled>Undo</button>
         <button id="resetBtn">Reset</button>
         <button id="stopBtn" disabled>Stop</button>
-    </div>  <--- Closing div for controls.  Summary should be *outside* this
+    </div>  //<--- Closing div for controls.  Summary should be *outside* this
 
 
-    <div id="summary">  <--- Summary is now a sibling to controls, not a child
+    <div id="summary">  //<--- Summary is now a sibling to controls, not a child
         <div id="summaryContent"></div>
         <button id="closeSummaryBtn">Close</button>
         <button id="shareBtn">Share Results</button>  
