--- a/index.html
+++ b/index.html
@@ -180,24 +180,25 @@
             document.getElementById('stopBtn').disabled = false;
         }
 
-        function stopWorkout() {
-            clearInterval(timerInterval);
-            const now = Date.now();
-            const lastRoundTime = (now - lastTapTime) / 1000;
-            roundTimes.push(lastRoundTime);
-            const totalTime = (now - startTime) / 1000;
-            
-            let summaryHTML = `<h2>Workout Summary</h2>
-                               <p>Total Time: ${totalTime.toFixed(2)} seconds</p>
-                               <h3>Round Times:</h3><ul>`;
-            roundTimes.forEach((time, index) => {
-                summaryHTML += `<li>Round ${index + 1}: ${time.toFixed(2)} seconds</li>`;
-            });
-            summaryHTML += '</ul>';
-            document.getElementById('summaryContent').innerHTML = summaryHTML;
-            document.getElementById('summary').style.display = 'flex';
-        }
-
+    function stopWorkout() {
+    clearInterval(timerInterval);
+    const now = Date.now();
+    const lastRoundTime = (now - lastTapTime) / 1000;  // Calculate the last round time
+    roundTimes.push(lastRoundTime);
+    const totalTime = (now - startTime) / 1000;
+    let summaryHTML = `<h2>Workout Summary</h2>
+                        <p>Total Time: ${totalTime.toFixed(2)} seconds</p>
+                        <h3>Round Times:</h3>
+                        <ul>`;
+    for (let i = 0; i < roundTimes.length; i++) {
+        summaryHTML += `<li>Round ${i + 1}: ${roundTimes[i].toFixed(2)} seconds</li>`;
+    }
+    summaryHTML += `</ul>`;
+    document.getElementById('summaryContent').innerHTML = summaryHTML;
+    document.getElementById('summary').style.display = 'flex';
+    summaryDisplayed = true;
+}
+        
         function updateTimer() {
             const totalSeconds = Math.floor((Date.now() - startTime) / 1000);
             const minutes = Math.floor(totalSeconds / 60);
@@ -206,8 +207,7 @@
                 `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
         }
 
-      // new gemini code
-     document.addEventListener('DOMContentLoaded', function() {
+         document.addEventListener('DOMContentLoaded', function() {
      let summaryDisplayed = false;
      document.body.addEventListener('click', (event) => {
                 if (!summaryDisplayed) {
